# ligmir

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
src/: character_sheet.rs  main.rs  telegram.rs
