[package]
name = "ligmir"
version = "0.1.0"
authors = ["Ruslan Fadeev <kinrany@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
headless_chrome = { version = "0.9.0", default-features = false }
strsim = "0.10.0"
rand = "0.8.3"

[dependencies.telegram-bot]
version = "0.8.0"
default-features = false
features = ["rustls"]

[dependencies.reqwest]
version = "0.11.0"
default-features = false
features = ["rustls-tls"]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
rev = "0654890e3d03a91537ee1d06b34ea3d2143f009e"
default-features = false
features = ["tls"]

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
rev = "0654890e3d03a91537ee1d06b34ea3d2143f009e"
default-features = false
features = ["json"]
